--- a/frontend/src/components/style.css
+++ b/frontend/src/components/style.css
@@ -8,12 +8,14 @@
   
   body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f7fc; 
+    background-color: #f6f67f; 
     color: #333; 
     line-height: 1.6;
     padding: 20px;
   }
-  
+  .search-container{
+    background-color: #f4f4cc;
+  }
   
   .App {
     max-width: 800px;
@@ -73,6 +75,7 @@
     position: relative;
     width: 100%;
     margin-top: 20px;
+    background-color: #f4f4cc;
   }
   
   .carousel {
@@ -86,7 +89,7 @@
     border: 1px solid #ddd;
     margin: 5px;
     box-sizing: border-box;
-    background-color: #f9f9f9;
+    background-color: #f4f4cc;
     border-radius: 8px;
   }
   
@@ -109,7 +112,7 @@
   }
   
   button[disabled] {
-    background-color: #ddd;
+    background-color: #f4f4cc;
     cursor: not-allowed;
   }
   
